[package]
name = "rust_py_blake3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_py_blake3"
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[features]
neon = ["blake3/neon"]

[dependencies]
rayon = "1.5.1"
blake3 = { version = "1.3.1", features = ["rayon"] }
time = "*"
chrono = "0.4"